--- a/docs/turma/bio2020.mdx
+++ b/docs/turma/bio2020.mdx
@@ -6,12 +6,32 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Zoologia dos cordados II - 483",
+          subject: "PCCC 7  - Temas transversais - 1549",
           size: 1,
           teachers: [
-            "Paula Magalhães Souza Deccache"
+            "Amilcar Machado Profeta Filho"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
+          students: "BIO2020",
+          time: "19:50 - 20:40"
+        },
+        {
+          subject: "Bioestatística - 487",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "",
+          students: "BIO2020",
+          time: "21:50 - 22:40"
+        },
+        {
+          subject: "Trabalho de conclusão de curso I - 484",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "",
           students: "BIO2020",
           time: "19:00 - 19:50"
         }
@@ -21,34 +41,24 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "PCCC 7  - Temas transversais - 1549",
+          subject: "Bioestatística - 487",
           size: 1,
           teachers: [
-            "Amilcar Machado Profeta Filho"
+            "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
+          students: "BIO2020",
+          time: "21:50 - 22:40"
+        },
+        {
+          subject: "Zoologia dos cordados II - 483",
+          size: 1,
+          teachers: [
+            "Paula Magalhães Souza Deccache"
+          ],
+          classroom: "",
           students: "BIO2020",
           time: "19:00 - 19:50"
-        },
-        {
-          subject: "PCCC 7  - Temas transversais - 1549",
-          size: 1,
-          teachers: [
-            "Amilcar Machado Profeta Filho"
-          ],
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Genética molecular - 85",
-          size: 1,
-          teachers: [
-            "Gabriele Antico Freiria"
-          ],
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "21:00 - 21:50"
         },
         {
           subject: "Geologia e paleontologia - 491",
@@ -56,9 +66,9 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
-          time: "21:50 - 22:40"
+          time: "19:50 - 20:40"
         }
       ]
     },
@@ -71,7 +81,17 @@ const data = {
           teachers: [
             "Amilcar Machado Profeta Filho"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
+          students: "BIO2020",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "PCCC 7  - Temas transversais - 1549",
+          size: 1,
+          teachers: [
+            "Amilcar Machado Profeta Filho"
+          ],
+          classroom: "",
           students: "BIO2020",
           time: "19:50 - 20:40"
         },
@@ -81,19 +101,9 @@ const data = {
           teachers: [
             "Gabriele Antico Freiria"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Zoologia dos cordados II - 483",
-          size: 1,
-          teachers: [
-            "Paula Magalhães Souza Deccache"
-          ],
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "21:00 - 21:50"
+          time: "21:50 - 22:40"
         },
         {
           subject: "Geologia e paleontologia - 491",
@@ -101,9 +111,9 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
-          time: "21:50 - 22:40"
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -111,14 +121,14 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Bioestatística - 487",
+          subject: "Genética molecular - 85",
           size: 1,
           teachers: [
-            "Elenice Josefa Kolancko Setti"
+            "Gabriele Antico Freiria"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
-          time: "21:50 - 22:40"
+          time: "19:50 - 20:40"
         },
         {
           subject: "Trabalho de conclusão de curso I - 484",
@@ -126,27 +136,17 @@ const data = {
           teachers: [
             "Jhones Donizetti Mendes"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
           time: "21:00 - 21:50"
         },
         {
-          subject: "Geologia e paleontologia - 491",
+          subject: "Zoologia dos cordados II - 483",
           size: 1,
           teachers: [
-            "Renato Lada Guerreiro"
+            "Paula Magalhães Souza Deccache"
           ],
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Geologia e paleontologia - 491",
-          size: 1,
-          teachers: [
-            "Renato Lada Guerreiro"
-          ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
           time: "19:00 - 19:50"
         }
@@ -156,42 +156,42 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Bioestatística - 487",
-          size: 1,
-          teachers: [
-            "Elenice Josefa Kolancko Setti"
-          ],
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "19:00 - 19:50"
-        },
-        {
           subject: "Genética molecular - 85",
           size: 1,
           teachers: [
             "Gabriele Antico Freiria"
           ],
-          classroom: "Sala 11-2",
-          students: "BIO2020",
-          time: "21:50 - 22:40"
-        },
-        {
-          subject: "Genética molecular - 85",
-          size: 1,
-          teachers: [
-            "Gabriele Antico Freiria"
-          ],
-          classroom: "Sala 11-2",
+          classroom: "",
           students: "BIO2020",
           time: "21:00 - 21:50"
         },
         {
-          subject: "Trabalho de conclusão de curso I - 484",
+          subject: "Genética molecular - 85",
           size: 1,
           teachers: [
-            "Jhones Donizetti Mendes"
+            "Gabriele Antico Freiria"
           ],
-          classroom: "Sala 11-2",
+          classroom: "",
+          students: "BIO2020",
+          time: "21:50 - 22:40"
+        },
+        {
+          subject: "Geologia e paleontologia - 491",
+          size: 1,
+          teachers: [
+            "Renato Lada Guerreiro"
+          ],
+          classroom: "",
+          students: "BIO2020",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Geologia e paleontologia - 491",
+          size: 1,
+          teachers: [
+            "Renato Lada Guerreiro"
+          ],
+          classroom: "",
           students: "BIO2020",
           time: "19:50 - 20:40"
         }
