--- a/docs/turma/bio_especial.mdx
+++ b/docs/turma/bio_especial.mdx
@@ -11,19 +11,9 @@ const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "",
           students: "BIO_ESPECIAL",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Bioquímica - 71",
-          size: 1,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Laboratório de Química",
-          students: "BIO_ESPECIAL",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -36,7 +26,17 @@ const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
+          students: "BIO_ESPECIAL",
+          time: "19:50 - 20:40"
+        },
+        {
+          subject: "Sistemática vegetal I - 660",
+          size: 1,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "",
           students: "BIO_ESPECIAL",
           time: "21:00 - 21:50"
         },
@@ -46,19 +46,9 @@ const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: "BIO_ESPECIAL",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Estágio curricular supervisionado em ciências I - 84",
-          size: 1,
-          teachers: [
-            "Marcia Aparecida Barbosa"
-          ],
-          classroom: "Sala 9-2",
-          students: "BIO_ESPECIAL",
-          time: "21:50 - 22:40"
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -71,7 +61,7 @@ const data = {
           teachers: [
             "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: "BIO_ESPECIAL",
           time: "21:00 - 21:50"
         },
@@ -81,17 +71,17 @@ const data = {
           teachers: [
             "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: "BIO_ESPECIAL",
           time: "19:50 - 20:40"
         },
         {
-          subject: "Bioquímica - 71",
+          subject: "Estágio curricular supervisionado em ciências I - 84",
           size: 1,
           teachers: [
-            "Karina Dias Espartosa"
+            "Marcia Aparecida Barbosa"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "",
           students: "BIO_ESPECIAL",
           time: "19:00 - 19:50"
         }
@@ -101,24 +91,14 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Sistemática vegetal I - 660",
+          subject: "Bioquímica - 71",
           size: 1,
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: "BIO_ESPECIAL",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "PCCC 4 - Tecnologia da informação e comunicação na educação - 783",
-          size: 1,
-          teachers: [
-            "Marcia Aparecida Barbosa"
-          ],
-          classroom: "Sala 9-2",
-          students: "BIO_ESPECIAL",
-          time: "19:50 - 20:40"
+          time: "21:50 - 22:40"
         }
       ]
     },
@@ -131,7 +111,17 @@ const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "",
+          students: "BIO_ESPECIAL",
+          time: "19:50 - 20:40"
+        },
+        {
+          subject: "Bioquímica - 71",
+          size: 1,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "",
           students: "BIO_ESPECIAL",
           time: "19:00 - 19:50"
         },
@@ -141,9 +131,19 @@ const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "Sala 9-2",
+          classroom: "",
           students: "BIO_ESPECIAL",
-          time: "19:50 - 20:40"
+          time: "21:00 - 21:50"
+        },
+        {
+          subject: "PCCC 4 - Tecnologia da informação e comunicação na educação - 783",
+          size: 1,
+          teachers: [
+            "Marcia Aparecida Barbosa"
+          ],
+          classroom: "",
+          students: "BIO_ESPECIAL",
+          time: "21:50 - 22:40"
         }
       ]
     }
