--- a/docs/turma/bio_especial_2.mdx
+++ b/docs/turma/bio_especial_2.mdx
@@ -45,8 +45,7 @@ const data = {
           subject: "Embriologia animal e histologia",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira",
-            "Paula Magalhães Souza Deccache"
+            "Eliana Peliçon Pereira Figueira"
           ],
           classroom: "",
           students: "BIO_ESPECIAL_2",
