--- a/docs/sala/laboratorio_de_biologia.mdx
+++ b/docs/sala/laboratorio_de_biologia.mdx
@@ -7,18 +7,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Biologia 1",
-          size: 1,
-          teachers: [
-            "Eliana Peliçon Pereira Figueira"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: [
-            "EIN2023"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Biologia III",
           size: 2,
           teachers: [
@@ -106,18 +94,6 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Biologia 4",
-          size: 2,
-          teachers: [
-            "Eliana Peliçon Pereira Figueira"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: [
-            "EIN2020"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Biologia I",
           size: 2,
           teachers: [
@@ -145,7 +121,32 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Biologia 1",
+          size: 1,
+          teachers: [
+            "Eliana Peliçon Pereira Figueira"
+          ],
+          classroom: "Laboratório de Biologia",
+          students: [
+            "EIN2023"
+          ],
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Biologia 4",
+          size: 2,
+          teachers: [
+            "Eliana Peliçon Pereira Figueira"
+          ],
+          classroom: "Laboratório de Biologia",
+          students: [
+            "EIN2020"
+          ],
+          time: "10:15 - 11:05"
+        }
+      ]
     }
   ],
   time: [
