--- a/docs/turma/bio/bio_especial_2.mdx
+++ b/docs/turma/bio/bio_especial_2.mdx
@@ -41,7 +41,7 @@ const data = {
           teachers: [
             "Marcia Aparecida Barbosa"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica C",
           students: [
             "BIO_ESPECIAL_2"
           ],
