--- a/docs/turma/bio/bio_especial_estagio.mdx
+++ b/docs/turma/bio/bio_especial_estagio.mdx
@@ -21,7 +21,7 @@ const data = {
             "Jhones Donizetti Mendes",
             "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica A",
           students: [
             "BIO_ESPECIAL_ESTÁGIO"
           ],
@@ -55,7 +55,7 @@ const data = {
           teachers: [
             "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica A",
           students: [
             "BIO_ESPECIAL_ESTÁGIO"
           ],
