--- a/docs/turma/bio/bio_especial_2.mdx
+++ b/docs/turma/bio/bio_especial_2.mdx
@@ -14,7 +14,7 @@ const data = {
           subject: "PCCC 1 - Integração de conteúdos do semestre por meio da informática",
           size: 3,
           teachers: [
-            "Rafael Silva Santos"
+            "Samuel Stephan Milczuk"
           ],
           classroom: "Laboratório de Informatica C",
           students: [
