--- a/versioned_docs/version-2024.1.9/sala/bloco_1/laboratorio_de_biologia.mdx
+++ b/versioned_docs/version-2024.1.9/sala/bloco_1/laboratorio_de_biologia.mdx
@@ -33,6 +33,19 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Biologia 4",
+          size: 3,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Laboratório de Biologia",
+          students: [
+            "EIN2021"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Biologia 1",
           size: 1,
           teachers: [
