--- a/docs/turma/bio/bio_especial_1.mdx
+++ b/docs/turma/bio/bio_especial_1.mdx
@@ -16,7 +16,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "BIO_ESPECIAL_1 - Modulo 2"
           ],
@@ -29,7 +29,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "BIO_ESPECIAL_1 - Modulo 2"
           ],
@@ -78,7 +78,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "BIO_ESPECIAL_1 - Modulo 2"
           ],
@@ -91,7 +91,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "BIO_ESPECIAL_1 - Modulo 2"
           ],
