--- a/versioned_docs/version-2024.1.11/turma/bio/bio_especial_2.mdx
+++ b/versioned_docs/version-2024.1.11/turma/bio/bio_especial_2.mdx
@@ -34,7 +34,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 8-2",
           students: [
             "BIO_ESPECIAL_2 - Modulo 2"
           ],
@@ -47,7 +47,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 8-2",
           students: [
             "BIO_ESPECIAL_2 - Modulo 2"
           ],
@@ -96,7 +96,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 8-2",
           students: [
             "BIO_ESPECIAL_2 - Modulo 2"
           ],
@@ -109,7 +109,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 8-2",
           students: [
             "BIO_ESPECIAL_2 - Modulo 2"
           ],
