--- a/docs/sala/bloco_1/laboratorio_de_biologia.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_biologia.mdx
@@ -1,26 +1,15 @@
+---
+slug: /sala/laboratorio_de_biologia
+---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Octavio Henrique Viana",
-  base: "",
+  title: "Laboratório de Biologia",
+  base: "Bloco 1",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Topografia e Geoprocessamento",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "AGR2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -28,21 +17,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Irrigação e Drenagem",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Sala 2-2",
-          students: [
-            "AGR2023"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -50,7 +25,21 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Laboratório de Biologia",
+          students: [
+            "IIW2022A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
@@ -113,7 +102,7 @@ export const data = {
   ]
 }
 
-# Octavio Henrique Viana
+# Laboratório de Biologia
 
 <div>
   {
