--- a/docs/turma/bio/bio_especial_1.mdx
+++ b/docs/turma/bio/bio_especial_1.mdx
@@ -9,21 +9,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Zoologia dos invertebrados I",
-          size: 4,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "BIO_ESPECIAL_1"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -47,7 +33,7 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Zoologia dos invertebrados I",
+          subject: "Zoologia dos cordados I",
           size: 4,
           teachers: [
             "Karina Dias Espartosa"
