--- a/docs/turma/bio/bio_especial_2.mdx
+++ b/docs/turma/bio/bio_especial_2.mdx
@@ -27,21 +27,7 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Zoologia dos invertebrados II",
-          size: 4,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "BIO_ESPECIAL_2"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -76,21 +62,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Zoologia dos invertebrados II",
-          size: 4,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "BIO_ESPECIAL_2"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
