--- a/versioned_docs/version-2025.1.2/sala/bloco_1/laboratorio_de_biologia.mdx
+++ b/versioned_docs/version-2025.1.2/sala/bloco_1/laboratorio_de_biologia.mdx
@@ -64,6 +64,19 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Biologia 4",
+          size: 2,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Laboratório de Biologia",
+          students: [
+            "EIN2022"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Biologia 2",
           size: 1,
           teachers: [
