--- a/docs/turma/bio/bio_especial_2.mdx
+++ b/docs/turma/bio/bio_especial_2.mdx
@@ -62,10 +62,6 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Estágio curricular supervisionado em biologia I",
@@ -73,7 +69,7 @@ export const data = {
           teachers: [
             "Marcia Aparecida Barbosa"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Sala 9-2",
           students: [
             "BIO_ESPECIAL_2"
           ],
@@ -86,7 +82,7 @@ export const data = {
           teachers: [
             "Marcia Aparecida Barbosa"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Sala 9-2",
           students: [
             "BIO_ESPECIAL_2"
           ],
@@ -94,6 +90,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: []
     }
   ],
   time: [
