--- a/docs/sala/bloco_1/laboratorio_de_biologia.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_biologia.mdx
@@ -14,20 +14,7 @@ export const data = {
           subject: "Biologia I",
           size: 2,
           teachers: [
-            "Leandro Luiz Borges"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: [
-            "IIW2025A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Biologia I",
-          size: 2,
-          teachers: [
-            "Leandro Luiz Borges"
+            "Eliana Peliçon Pereira Figueira"
           ],
           classroom: "Laboratório de Biologia",
           students: [
@@ -60,14 +47,14 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Biologia 2",
-          size: 1,
+          subject: "Biologia I",
+          size: 2,
           teachers: [
             "Leandro Luiz Borges"
           ],
           classroom: "Laboratório de Biologia",
           students: [
-            "EIN2024"
+            "IIW2025A"
           ],
           time: "07:30 - 08:20",
           color: ""
