--- a/docs/turma/bio/bio_especial_1.mdx
+++ b/docs/turma/bio/bio_especial_1.mdx
@@ -9,7 +9,21 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Política educacional: organização da educação brasileira",
+          size: 2,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "BIO_ESPECIAL_1"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
