--- a/docs/sala/bloco_1/laboratorio_de_biologia.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_biologia.mdx
@@ -71,7 +71,8 @@ export const data = {
           subject: "Biologia 4",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
@@ -84,7 +85,8 @@ export const data = {
           subject: "Biologia 1",
           size: 1,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
@@ -128,7 +130,8 @@ export const data = {
           subject: "Biologia I",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
@@ -141,7 +144,8 @@ export const data = {
           subject: "Biologia III",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
@@ -216,7 +220,8 @@ export const data = {
           subject: "Biologia III",
           size: 2,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Eliana Peliçon Pereira Figueira",
+            "Gabriele Antico Freiria"
           ],
           classroom: "Laboratório de Biologia",
           students: [
